Criada função para verificar se o trabalho foi revisado Criada função para verificar se o trabalho foi indicado a best paper Criada pagina de listar trabalhos do evento Criada funcao no controller para listar os trabalhos de um evento Criado novo fragment para listar autores e revisores inline

--- a/aplicacao/contest/src/main/resources/templates/fragments/listar_participacoes.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/listar_participacoes.html
@@ -11,6 +11,12 @@
 		</blockquote>
 	</div>
 	
+	 <div th:fragment="listar-inline(label, participantes)">
+		<p th:unless="${#lists.isEmpty(participantes)}"><b th:text="${label}"></b></p>
+		<span th:each="participante, count : ${participantes}"  
+			th:text="${count.index != (#lists.size(participantes) - 1)} ? |${participante.nome}, | : ${participante.nome}">Nome de participante</span>
+	</div>
+	
 	<div th:fragment="listar-clean(label, participantes)">
 		<p th:unless="${#lists.isEmpty(participantes)}"><b th:text="${label}"></b></p>
 		<p th:each="participante : ${participantes}" th:text="${participante.nome}">Nome de participante</p>
