--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -83,7 +83,7 @@
                   <p th:text="'Não Revisados: '+ ${numeroTrabalhosNaoRevisados}"></p>
                 </div>
                 <div class="card-action" th:if="${organizaEvento}">
-                  <a href="#" class="btn disabled white-text waves-effect waves-light blue-grey">Ver todos</a>
+                  <a th:href="@{'/eventoOrganizador/evento/' + ${evento.id} + '/trabalhos'}" class="btn white-text waves-effect waves-light blue-grey">Ver todos</a>
                 </div>
               </div>
             </div>
