--- a/aplicacao/contest/src/main/resources/templates/organizador/org_ver_trabalhos_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_ver_trabalhos_evento.html
@@ -22,8 +22,8 @@
 	                <div>
 	                	<div class="card-content">
 	                		<span class="card-title" th:text="${trabalho.titulo}"></span>
-	                		<div th:include="fragments/listar_participacoes :: listar-clean('Autor(es):', ${trabalho.autoresDoTrabalho})"></div>
-	                		<div th:include="fragments/listar_participacoes :: listar-clean('Revisor(es):', ${trabalho.revisores})"></div>
+	                		<div th:include="fragments/listar_participacoes :: listar-inline('Autor(es):', ${trabalho.autoresDoTrabalho})"></div>
+	                		<div th:include="fragments/listar_participacoes :: listar-inline('Revisor(es):', ${trabalho.revisores})"></div>
 	                   	</div>
 	                   	<div class="card-action">
 	              			<div class="chip  yellow lighten-1" th:if="${trabalho.isIndicadoMelhoresTrabalhos()}">
