Utilizando a maneira correta de buscar o autor do trabalho

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
@@ -34,7 +34,7 @@
               <tbody>             
                 <tr th:each="trabalho : ${trabalhos}">
                   <td th:text="${trabalho.titulo}"></td>
-                  <td th:text="${trabalho.participacoes[0].pessoa.nome}"></td>
+                  <td th:text="${trabalho.autor.nome}"></td>
                   <td th:if="${#lists.isEmpty(trabalho.revisoes)}">Não</td>
                   <td th:if="${not #lists.isEmpty(trabalho.revisoes)}">Sim</td>
                 </tr>
