Botão informando que o prazo de revisão encerrou adicionado na visao do revisor
* Refatoração do fragment da timeline

--- a/aplicacao/contest/src/main/resources/templates/fragments/evento_timeline.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/evento_timeline.html
@@ -5,7 +5,19 @@
 </head>
 <body>
     <div th:fragment="evento-timeline(evento)">
-		<div class="card-content">
+		<div class="card-content"
+			th:with="data_inicial=${#calendars.format({evento.PrazoSubmissaoInicial},'dd/MM/YYYY')},
+			data_inicial_label=${#calendars.format({evento.PrazoSubmissaoInicial},'dd MMM')},
+			data_revisao_inicial=${#calendars.format({evento.PrazoRevisaoInicial},'dd/MM/YYYY')},
+			data_revisao_inicial_label=${#calendars.format({evento.PrazoRevisaoInicial},'dd MMM')},
+			data_revisao_final=${#calendars.format({evento.PrazoRevisaoFinal},'dd/MM/YYYY')},
+			data_revisao_final_label=${#calendars.format({evento.PrazoRevisaoFinal},'dd MMM')},
+			data_fim_envio_final=${#calendars.format({evento.PrazoSubmissaoFinal},'dd/MM/YYYY')},
+			data_fim_envio_final_label=${#calendars.format({evento.PrazoSubmissaoFinal},'dd MMM')},
+			hoje=${#calendars.createToday()},
+			data_hoje=${#calendars.format({hoje},'dd/MM/YYYY')},
+			data_hoje_label=${#calendars.format({hoje},'dd MMM')}
+			">
 			<span class="card-title" th:text="${evento.nome}"></span>
 			<p th:text="${evento.descricao}"></p>
 			<section class="cd-horizontal-timeline">
@@ -14,10 +26,13 @@
 				<div class="events-wrapper">
 					<div class="events">
 						<ol>
-							<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoInicial},'dd/MM/YYYY')}" class="selected" th:text="${#calendars.format({evento.PrazoSubmissaoInicial},'dd MMM')}">16 Jan</a></li>
-							<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoRevisaoInicial},'dd/MM/YYYY')}" th:text="${#calendars.format({evento.PrazoRevisaoInicial},'dd MMM')}">28 Feb</a></li>
-							<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoRevisaoFinal},'dd/MM/YYYY')}" th:text="${#calendars.format({evento.PrazoRevisaoFinal},'dd MMM')}">20 Mar</a></li>
-							<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoFinal},'dd/MM/YYYY')}" th:text="${#calendars.format({evento.PrazoSubmissaoFinal},'dd MMM')}">20 Mar</a></li>
+							<li><a class="selected" href="#0" th:attr="data-date=${data_inicial}" th:text="${data_inicial_label}">16 Jan</a></li>
+							<!--<li th:if="${evento.isPeriodoInicial()}"><a class="selected" href="#0" th:attr="data-date=${data_hoje}" th:text="${data_hoje_label}"></a></li> -->
+							<li><a href="#0" th:attr="data-date=${data_revisao_inicial}" th:text="${data_revisao_inicial_label}">28 Feb</a></li>
+							<!--<li th:if="${evento.isPeriodoRevisao()}"><a class="selected" href="#0" th:attr="data-date=${data_hoje}" th:text="${data_hoje_label}"></a></li> -->
+							<li><a href="#0" th:attr="data-date=${data_revisao_final}" th:text="${data_revisao_final_label}">20 Mar</a></li>
+							<!--<li th:if="${evento.isPeriodoFinal()}"><a class="selected" href="#0" th:attr="data-date=${data_hoje}" th:text="${data_hoje_label}"></a></li> -->
+							<li><a href="#0" th:attr="data-date=${data_fim_envio_final}" th:text="${data_fim_envio_final_label}">20 Mar</a></li>
 						</ol>
 						<span class="filling-line" aria-hidden="true"></span>
 					</div>
@@ -29,18 +44,31 @@
 			</div>
 			<div class="events-content">
 				<ol>
-					<li class="selected" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoInicial},'dd/MM/YYYY')}">
+					<li class="selected" th:attr="data-date=${data_inicial}">
 						<em>Começa o período de submissão dos artigos</em>
 					</li>
-					<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoInicial},'dd/MM/YYYY')}">
+					<!-- 
+					<li class="selected" th:if="${evento.isPeriodoInicial()}" th:attr="data-date=${data_hoje}">
+						<em>Hoje, período de submissão aberto</em>
+					</li>
+					 -->
+					<li th:attr="data-date=${data_revisao_inicial}">
 						<em>Terminou o periodo de submissão, hora de começar as Revisões</em>
 					</li>
-		
-					<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoFinal},'dd/MM/YYYY')}">
+					<!-- 
+					<li class="selected" th:if="${evento.isPeriodoRevisao()}" th:attr="data-date=${data_hoje}">
+						<em>Hoje, período de revisão aberto</em>
+					</li>
+					 -->
+					<li th:attr="data-date=${data_revisao_final}">
 						<em>Terminaram as revisões, hora de submeter a versão final</em>
 					</li>
-					
-					<li href="#0" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoFinal},'dd/MM/YYYY')}">
+					<!-- 
+					<li class="selected" th:if="${evento.isPeriodoFinal()}" th:attr="data-date=${data_hoje}">
+						<em>Hoje, período de envio da versão final aberto</em>
+					</li>
+					 -->
+					<li href="#0" th:attr="data-date=${data_fim_envio_final}">
 						<em>Ultimo dia para submeter a versão final do artigo</em>
 					</li>
 				</ol>
