--- a/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
@@ -47,50 +47,10 @@
           <div class="row" th:each="evento : ${eventos}">
             <div class="card horizontal">
               <div class="card-stacked">
-                <div class="card-content"><span class="card-title" th:text="${evento.nome}"></span>
-                  <p th:text="${evento.descricao}">
-                  </p>
-                  
-                 <section class="cd-horizontal-timeline">
-					<div class="timeline">
-						<div class="events-wrapper">
-							<div class="events">
-								<ol>
-									<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoInicial},'dd/MM/YYYY')}" class="selected" th:text="${#calendars.format({evento.PrazoSubmissaoInicial},'dd MMM')}">16 Jan</a></li>
-									<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoRevisaoInicial},'dd/MM/YYYY')}" th:text="${#calendars.format({evento.PrazoRevisaoInicial},'dd MMM')}">28 Feb</a></li>
-									<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoRevisaoFinal},'dd/MM/YYYY')}" th:text="${#calendars.format({evento.PrazoRevisaoFinal},'dd MMM')}">20 Mar</a></li>
-									<li><a href="#0" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoFinal},'dd/MM/YYYY')}" th:text="${#calendars.format({evento.PrazoSubmissaoFinal},'dd MMM')}">20 Mar</a></li>
-								</ol>
-								<span class="filling-line" aria-hidden="true"></span>
-							</div>
-						</div>
-						<ul class="cd-timeline-navigation">
-							<li><a href="#0" class="prev inactive">Prev</a></li>
-							<li><a href="#0" class="next">Next</a></li>
-						</ul>
-					</div>
-					<div class="events-content">
-						<ol>
-							<li class="selected" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoInicial},'dd/MM/YYYY')}">
-								<em>Começa o período de submissão dos trabalhos</em>
-							</li>
-							<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoInicial},'dd/MM/YYYY')}">
-								<em>Terminou o periodo de submissão inicial, hora de começar as Revisões</em>
-							</li>
-				
-							<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoFinal},'dd/MM/YYYY')}">
-								<em>Terminaram as revisões, hora de submeter a versão final</em>
-							</li>
-							
-							<li href="#0" th:attr="data-date=${#calendars.format({evento.PrazoSubmissaoFinal},'dd/MM/YYYY')}">
-								<em>Último dia para submeter a versão final do trabalho</em>
-							</li>
-						</ol>
-					</div>
-				 </section>
-                </div>
+                <div th:include="fragments/evento_timeline::evento-timeline(evento=${evento})"></div>
                 <div class="card-action">
                 	<a th:if="${evento.isPeriodoRevisao()}" th:href="@{'/revisor/' + ${evento.id} + '/trabalhosRevisao'}" class="waves-effect waves-light btn-large white-text">Ver Trabalhos para revisão</a>
+                	<a  th:if="${evento.isPeriodoFinal()}" class="btn disabled grey white-text">Prazo de revisão encerrado</a>
                     <a th:href="@{'/eventoOrganizador/evento/' + ${evento.id}}" class="purple-text">Detalhes</a>
                 </div>
               </div>
