--- a/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row">
           <div class="input-field">
-            <input id="pesquisar" type="text" oninput="buscar(this,'card-stacked')" class="col s11"/>
+            <input id="pesquisar" type="text" oninput="buscar(this,'card-stacked','card-content')" class="col s11"/>
             <label for="pesquisar">Procurando um evento específico?</label><a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">search</i></a>
           </div>
         </div>
@@ -67,17 +67,20 @@
      <script type="text/javascript">
 		$(document).ready(function(){
 			
-			buscar = function(e,componente) {
+			buscar = function(e,componente,elementoABuscar) {
 				var filtro = e;
 				var componente = componente;
+				var elementoABuscar = elementoABuscar;
 				
 				var nomeFiltro = removerAcentos(filtro.value.toLowerCase());
-				var elemento = document.getElementsByClassName(componente);
+				var componenteCompleto = document.getElementsByClassName(componente);
+				var elemento = document.getElementsByClassName(elementoABuscar);
+				
 				
 				 for (var i = elemento.length - 1; i >=0; i--){
-					var conteudoBusca = removerAcentos(elemento[i].children[0].firstElementChild.innerHTML);
+					var conteudoBusca = removerAcentos(elemento[i].firstElementChild.innerHTML);
 					var corresponde = conteudoBusca.toLowerCase().indexOf(nomeFiltro) >= 0;
-					elemento[i].style.display = corresponde ? '' : 'none';
+					componenteCompleto[i].style.display = corresponde ? '' : 'none';
 			    } 
 				
 			};
