--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -36,7 +36,7 @@
 								<h6 th:text="'Trilha: ' + ${trabalho.trilha.nome}"></h6>
 							</div>
 							<div class="card-action" th:switch="${#lists.contains(trabalhosRevisados, trabalho.id)}">
-								<a th:case='false' th:href="@{'/revisor/' + ${evento.id} + '/' + ${trabalho.id} + '/revisar'}"
+								<a th:case='false' th:href="@{'/revisor/' + ${trabalho.id} + '/revisar'}"
 									class="btn white-text waves-effect waves-light btn-large">REVISAR</a>
 								<a th:case='true' class="btn white-text waves-effect waves-light btn-large light-green darken-2" th:disabled="${true}">REVISADO</a>
 							</div>
