- Agr antes de mostrar a tela de detalhes do evento  é feito uma verificação para saber se o usuário é organizador ou n

--- a/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
@@ -12,12 +12,12 @@
 	       
 	       <!-- Dropdown Structure -->
 			<ul th:if="${evento}" id='dropdown1' class='dropdown-content'>
-			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosOrganizador/${evento.id}|}">Certificados para Organização</a></li>
-			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosRevisores/${evento.id}|}">Certificados para Revisores</a></li>
-			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosTrabalho/${evento.id}|}">Certificados para Trabalhos</a></li>
+				<li><a th:href="@{|/eventoOrganizador/gerarCertificadosOrganizador/${evento.id}|}">Certificados para Organização</a></li>
+			  	<li><a th:href="@{|/eventoOrganizador/gerarCertificadosRevisores/${evento.id}|}">Certificados para Revisores</a></li>
+			  	<li><a th:href="@{|/eventoOrganizador/gerarCertificadosTrabalho/${evento.id}|}">Certificados para Trabalhos</a></li>
 			</ul>
 	       	<!-- Dropdown Trigger -->
- 			<a th:if="${evento}" class='dropdown-button' href='#' data-activates='dropdown1'>Certificados</a>
+ 			<a  th:if="${gerarCertificado}" class='dropdown-button' href='#' data-activates='dropdown1'>Certificados</a>
  			
  			
 	       
