--- a/aplicacao/contest/src/main/resources/templates/organizador/org_gerar_certificados_organizadores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_gerar_certificados_organizadores.html
@@ -16,20 +16,20 @@
     <div th:include="fragments/header :: header"></div>
     <div class="container page">
 		<div th:include="fragments/organizador_menu_navegacao :: organizador_menu_navegacao"></div>
-    	<h2>Gerar Certificados Dos  Trabalhos</h2>
+    	<h2>Gerar Certificados Dos  Organizadores</h2>
 		<div class="row">
 			<a href="#" onclick="selecionarTodos()">Selecionar todos</a>
 			<a href="#" onclick="removerTodos()">Não selecionar todos</a>
 			<div class="col m12 s12">
 			    <br/>
-				<form th:action="@{/eventoOrganizador/gerarCertificadosOrganizadores}" method="POST">
-					<div th:each="pessoa,count : ${organizadores}">
-	      				<input type="checkbox" th:id="${count.index}"  name="organizadoresIds" th:value="${pessoa.id}"/>
-	      				<label class="black-text" th:for="${count.index}" th:text="${pessoa.nome}" ></label>
-					</div>
-					<br/>
-					<button type="submit" class="waves-effect waves-light btn white-text">Gerar PDF</button>		
-				</form>
+					<form th:action="@{/eventoOrganizador/gerarCertificadosOrganizadores}" method="POST">
+						<div th:each="pessoa,count : ${organizadores}">
+		      				<input type="checkbox" th:id="${count.index}"  name="organizadoresIds" th:value="${pessoa.id}"/>
+		      				<label class="black-text" th:for="${count.index}" th:text="${pessoa.nome}" ></label>
+						</div>
+						<br/>
+						<button type="submit" class="waves-effect waves-light btn white-text">Gerar Planilhas</button>		
+					</form>
 			</div>
 		</div>
 	</div>
