--- a/aplicacao/contest/src/main/resources/templates/organizador/org_editar_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_editar_eventos.html
@@ -50,7 +50,7 @@
             <textarea id="descricao_evento" class="materialize-textarea" th:field="*{descricao}"></textarea>
           </div>
           <div class="col s12">
-          	 <div class="col s3" th:if="${existeSubmissao}">
+          	 <div class="col s3" th:if="${existeSubmissao} == true">
                <div class="card-content">
                  <span class="card-title tooltipped" data-position="bottom" data-delay="50" data-tooltip="Esta data não pode ser alterada, porque possui uma submissão."> 
                  	Prazo de Submissão - Inicial
@@ -60,7 +60,8 @@
                  <input type="hidden" th:field="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial"/>
                </div>
              </div>
-             <div class="col s3" th:unless="${existeSubmissao}">
+              
+             <div class="col s3" th:unless="${existeSubmissao} == false">
                <div class="card-content">
                  <span class="card-title"> 
                  	Prazo de Submissão - Inicial
@@ -69,7 +70,7 @@
                </div>
              </div>
              
-             <div class="col s3" th:if="${existeSubmissaoRevisao}">
+             <div class="col s3" th:if="${existeSubmissaoRevisao} == true">
                <div class="card-content">
                  <span class="card-title tooltipped" data-position="bottom" data-delay="50" data-tooltip="Esta data não pode ser alterada, porque possui uma submissão."> 
                  	Prazo de Revisão - Inicial
@@ -79,7 +80,7 @@
                  <input type="hidden" th:field="*{prazoRevisaoInicial}" id="prazo_revisao_inicial"/>
                </div>
              </div>
-             <div class="col s3" th:unless="${existeSubmissaoRevisao}">
+             <div class="col s3" th:unless="${existeSubmissaoRevisao} == false">
                <div class="card-content">
                  <span class="card-title"> 
                  	Prazo de Revisão - Inicial
@@ -88,7 +89,7 @@
                </div>
              </div>
                       
-             <div class="col s3" th:if="${existeSubmissaoFinal}">
+             <div class="col s3" th:if="${existeSubmissaoFinal} == true">
                <div class="card-content">
                  <span class="card-title tooltipped" data-position="bottom" data-delay="50" data-tooltip="Esta data não pode ser alterada, porque possui uma versão final de um trabalho."> 
                  	Prazo de Revisão - Final
@@ -98,22 +99,23 @@
                  <input type="hidden" th:field="*{prazoRevisaoFinal}" id="prazo_revisao_final"/>
                </div>
              </div>
-             <div class="col s3" th:unless="${existeSubmissaoFinal}">
+             <div class="col s3" th:unless="${existeSubmissaoFinal} == false">
                <div class="card-content">
                  <span class="card-title"> 
                  	Prazo de Revisão - Final
                  </span>
                  <input type="date" th:field="*{prazoRevisaoFinal}" id="prazo_revisao_final" class="datepicker"/>
                </div>
-             </div>         
+                      
                       
              <div class="col s3">
                 <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
                   <input type="date" th:field="*{prazoSubmissaoFinal}" id="prazo_submissao_final" class="datepicker"/>
                 </div>
-              </div>         
+              </div> 
+              </div>        
                       
-           <div th:if="${eventoInativo}">
+           <div th:if="${eventoInativo} == true">
             
              <div class="col s3">
                <div class="card-content"><span class="card-title"> Prazo de Submissão - Inicial</span>
