--- a/aplicacao/contest/src/main/resources/templates/error/erro.html
+++ b/aplicacao/contest/src/main/resources/templates/error/erro.html
@@ -6,7 +6,7 @@
 <body>
   <div th:include="fragments/headerError :: header"></div>
   <div class="container page">
-    <h1 class="center">Arquivo ou recurso não encontrado(</h1>
+    <h1 class="center">Arquivo ou recurso não encontrado</h1>
     <div class="row ">
       <center>
     	<a th:href="@{/}" class="waves-effect waves-light btn white-text ">Voltar</a>
