Bug do formulado do evento que nao aparecia as datas foi ajustado

--- a/aplicacao/contest/src/main/resources/templates/fragments/CalendarioJS.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/CalendarioJS.html
@@ -34,6 +34,9 @@
 			var calendarioSubmissaoFinal = "#prazo_submissao_final";
 			var calendarioRevisaoInicial = "#prazo_revisao_inicial";
 			var calendarioRevisaoFinal = "#prazo_revisao_final";
+			
+			var picker = $(calendarioSubmissaoInicial).pickadate('picker');
+			picker.set('view', $(calendarioSubmissaoInicial).val(), { format: 'yyyy-mm-dd' })
 
 			function habilitarCalendario(calendario) {
 				$(calendario).removeAttr("disabled");
