--- a/aplicacao/contest/src/main/resources/templates/organizador/org_editar_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_editar_eventos.html
@@ -66,7 +66,7 @@
                  <span class="card-title"> 
                  	Prazo de Submissão - Inicial
                  </span>
-                 <input type="date" th:field="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial" class="datepicker"/>
+                 <input type="text" th:field="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial" class="datepicker"/>
                </div>
              </div>
              
@@ -85,7 +85,7 @@
                  <span class="card-title"> 
                  	Prazo de Revisão - Inicial
                  </span>
-                 <input type="date" th:field="*{prazoRevisaoInicial}" id="prazo_revisao_inicial" class="datepicker"/>
+                 <input type="text" th:field="*{prazoRevisaoInicial}" id="prazo_revisao_inicial" class="datepicker"/>
                </div>
              </div>
                       
@@ -104,13 +104,13 @@
                  <span class="card-title"> 
                  	Prazo de Revisão - Final
                  </span>
-                 <input type="date" th:field="*{prazoRevisaoFinal}" id="prazo_revisao_final" class="datepicker"/>
+                 <input type="text" th:field="*{prazoRevisaoFinal}" id="prazo_revisao_final" class="datepicker"/>
                </div>
               </div>          
                       
              <div class="col s3">
                 <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
-                  <input type="date" th:field="*{prazoSubmissaoFinal}" id="prazo_submissao_final" class="datepicker"/>
+                  <input type="text" th:field="*{prazoSubmissaoFinal}" id="prazo_submissao_final" class="datepicker"/>
                 </div>
               </div> 
           
