--- a/aplicacao/contest/src/main/resources/templates/cadastro.html
+++ b/aplicacao/contest/src/main/resources/templates/cadastro.html
@@ -21,31 +21,31 @@
             
             <div class="input-field">
               <input type="text" id="nome" required="required"/>
-              <label for="nome">Nome</label>
+              <label for="nome">*Nome</label>
             </div>
 
             <div class="input-field">
-              <input type="text" id="email" required="required"/>
-              <label for="email">Email</label>
+              <input type="email" id="email" required="required"/>
+              <label for="email">*Email</label>
             </div>
             
             <div class="input-field">
-              <input type="text" id="cpf" required="required"/>
-              <label for="cpf">CPF</label>
+              <input type="text" id="cpf" placeholder="Exemplo: 000.000.000-00"  pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required="required"/>
+              <label for="cpf">*CPF</label>
             </div>
 
             <div class="input-field">
               <input type="password" id="password" required="required" name="senha"/>
-              <label for="password">Senha</label>
+              <label for="password">*Senha</label>
             </div>
             
             <div class="input-field">
               <input type="password" id="password_confirm" required="required" name="senha_confirma" oninput="validaSenha(this)" />
-              <label for="password_confirm">Confirmar Senha</label>
+              <label for="password_confirm">*Repetir Senha</label>
             </div>
             <br/>
             <div class="right">
-            <button class="right btn waves-effect waves-light purple darken-4" type="submit" id="btn_cadastro">Cadastrar</button>
+            <button disabled="disabled" class="right btn waves-effect waves-light purple darken-4" type="submit" id="btn_cadastro">Cadastrar</button>
           </div>
           </form>
         </div>
@@ -57,7 +57,24 @@
   
   $(document).ready(function() {
 	  
-	  $("#btn_cadastro").prop("disabled", true);
+	  //validação de senha
+	  
+	  var password = document.getElementById("password");
+	  var password_confirm = document.getElementById("password_confirm");
+
+	function validatePassword(){
+	  if(password.value != password_confirm.value) {
+	    alert("Senhas diferentes!")
+	  } else {
+	    password_confirm.setCustomValidity('');
+	    $("#btn_cadastro").prop("disabled", false);
+	  }
+	}
+
+	
+	$("#password_confirm").blur(function() {
+		  validatePassword();
+		});
 
 	});
   </script>
