--- a/aplicacao/contest/src/main/resources/static/css/style.css
+++ b/aplicacao/contest/src/main/resources/static/css/style.css
@@ -126,3 +126,54 @@ h1, h2, h3 {
    .input-field .prefix.active {
      color:#6a1b9a ;
    }
+
+   
+   /*DatePicker*/
+
+.picker__date-display{
+    background-color: #6a1b9a;
+}
+
+.picker__weekday-display{
+    background-color: #6a1b9a;
+}
+
+.picker__today{
+    color: #6a1b9a;
+}
+
+.picker__clear{
+    color: #6a1b9a;
+}
+
+.picker__close{
+    color: #6a1b9a;
+}
+
+.picker__day.picker__day--today{
+    color:  #6a1b9a;
+}
+
+.picker__day--selected, .picker__day--selected:hover, .picker--focused .picker__day--selected{
+    background-color: #6a1b9a;
+}
+
+/* text area color contest*/
+.input-field textarea[type=text]:focus + label {
+    color: #6a1b9a;
+}
+/* label underline focus color */
+.input-field textarea[type=text]:focus {
+    border-bottom: 1px solid #6a1b9a;
+    box-shadow: 0 1px 0 0 #000;
+}
+/* valid color */
+.input-field textarea[type=text].valid {
+    border-bottom: 1px solid #6a1b9a ;
+    box-shadow: 0 1px 0 0 #000;
+}
+/* invalid color */
+.input-field textarea[type=text].invalid {
+    border-bottom: 1px solid #6a1b9a ;
+    box-shadow: 0 1px 0 0 #000;
+}
