--- a/aplicacao/contest/src/main/resources/templates/cadastro.html
+++ b/aplicacao/contest/src/main/resources/templates/cadastro.html
@@ -8,7 +8,7 @@
       <a id="logo-container" href="#" class="brand-logo center"><img th:src="@{/img/logotipo_white.png}" width="200px" alt="logo" /></a>
     </div>
   </nav>
-  <div class="section no-pad-bot" id="index-banner">
+  <div class="section no-pad-bot" id="">
     <div class="container">
     <a class=" btn-large waves-effect waves-light purple right white-text"  onclick="window.history.back()" alt="VOLTAR" >
 	       		Voltar
