--- a/aplicacao/contest/src/main/resources/templates/secao/cadastroSecao.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/cadastroSecao.html
@@ -14,6 +14,12 @@
         <a th:href="@{/secao/paginaSecao}" style="color: #6a1b9a;">Seções</a>
         <a th:href="@{/secao/cadastrarSecaoForm}" style="color: #6a1b9a;">Cadastrar Seção</a>
     </div>
+    
+   <div class="row">
+     <a class=" btn-large waves-effect waves-light purple right white-text"  onclick="window.history.back()" alt="VOLTAR" >
+	       		Voltar
+	 </a>
+	</div>
 
       <div class="row">
         <h1 class="center header">Cadastro de Seção</h1>
