--- a/aplicacao/contest/src/main/resources/static/css/style.css
+++ b/aplicacao/contest/src/main/resources/static/css/style.css
@@ -177,3 +177,33 @@ h1, h2, h3 {
     border-bottom: 1px solid #6a1b9a ;
     box-shadow: 0 1px 0 0 #000;
 }
+
+
+.page{
+    min-height: 650px;
+}
+
+.page a, .page a:visited {
+    color: #6a1b9a;
+    margin-right: 20px;
+}
+
+.opcoes a{
+    margin-right: 20px;
+}
+.opcoes a:hover{
+    border-bottom: 2px solid #6a1b9a;
+}
+
+.pagination li.active{
+    background-color: #6a1b9a;
+}
+
+h1, h2, h3 {
+    font-weight: lighter;
+    color: #37474f;
+}
+
+.dropdown-content li > span{
+	color: #6a1b9a;
+}
